fix page scroll on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
     max-width: 100%;
     height: auto;
     overflow: scroll;
+	overscroll-behavior: contain
 }
 
 .highlight-white {
